Update package.json with corrected repo name

--- a/package.json
+++ b/package.json
@@ -69,5 +69,5 @@
     "react-app-rewired": "~2.2.1",
     "react-window": "^1.8.11"
   },
-  "homepage": "OATutor-Chem1A"
+  "homepage": "https://allyqwert.github.io/chem-prod-checking"
 }
